native-cli (#40)
* native image fixes

* remove picocli

* refactor: update native-image